[package]
name = "smart-media"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = { version="0.32", features=["persistence", "serde",  "default_fonts", "glow", "x11"], default-features=false }
egui_extras = { version = "0.32", features = ["datepicker", "syntect", "serde", "image", "all_loaders" ]}
egui-data-table = { path = "G:\\Users\\Owner\\Documents\\1-MyStuff\\TechStuff\\GitHub\\egui-data-table", features = ["persistency"]}
# egui-data-table = { path = "C:\\Users\\Owner\\Desktop\\egui-data-table", features = ["persistency"]}
# egui-data-table = { git = "https://github.com/shadowbrok3r/egui-data-table", branch = "master", features = ["persistency"]}
egui_dock = { version = "0.17.0", features = ["serde"] }
egui_logger = "0.8"
open = { version = "5.3.2" }
chrono = { version = "0.4", features = ["clock", "std"] }
humansize = "2"
rfd = { version = "0.15", default-features = false, features = ["tokio"] } 
once_cell = "1"
rayon = "1.11"
crossbeam = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
image = { version = "0.25", features = ["serde"] }
base64 = "0.22"
blake3 = "1.5"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }
# surrealdb-alpha = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
anyhow = {  version = "1" }
simplelog = "0.12"
regex = "1.11"
# kalosm = { git = "https://github.com/floneum/floneum", branch = "main", features = ["language", "vision", "openai", "surrealdb"] }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
jwalk = "0.8"
candle-core = { version = "0.9", features = ["cuda"]}
candle-nn = { version = "0.9", features = ["cuda"]}
candle-transformers = { version = "0.9", features = ["cuda"]}
candle-examples = { version = "0.9", features = ["cuda"]}
tokenizers = { version = "0.22", features = ["http"] }
hf-hub = { version = "0.4" }
zip = "5"
egui-toast = { git = "https://github.com/shadowbrok3r/egui-toast"}
tar = "0.4"
flate2 = { version = "1", features = ["zlib"] }
bzip2 = "0.6"
xz2 = "0.1"
fastembed = { version = "5.2"}
sevenz-rust2 = { version = "0.19" }
widestring = "1"
rawkit = "0.1"
tempfile = "3"
safetensors = "0.6"

[features]
cpu = []


# Keep windows features for Windows-specific functionality
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
	"Win32_UI_Shell",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Com",
	"Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
	"Win32_System_Memory",
	"Win32_System_Performance",
	"Win32_System_SystemInformation",
    "UI",
    "UI_Shell",
	"Win32_Graphics_Dxgi"
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = "2"
winres = "0.1"

[dependencies.egui]
version = "0.32"
default-features = false
features = ["rayon", "bytemuck", "log"]

[dependencies.ort]
version = "2.0.0-rc.10"
features = ["cuda"]

[profile.release]
strip = true
# lto = true
panic = "unwind"
debug = false
opt-level = 3
# codegen-units = 1

[profile.dev]
strip = false
debug = true